# ORBIT

./: README.md  build_dist.bat  pyproject.toml
docs/figs/: icon_logo.xcf
src/orbit/: __init__.py  app.py  fov.py  image.py
src/orbit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/orbit/gui/: __init__.py  fov_viewer.py
tests/: measurements_A2.xlsx  open_qptiff.ipynb
